k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-python-deployment
  labels:
    app: devsu-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-python
  template:
    metadata:
      labels:
        app: devsu-python
    spec:
      containers:
        - name: web
          image: devsu-demo-python:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /api/users/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/users/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
